Make player to add symbol

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-      <div class="player">
+      <div class="player first active">
         <div class="wrapper">
           <p>Player 1</p>
           <svg viewBox="0 0 24 24">
@@ -24,19 +24,19 @@
 
       <div class="game">
         <div class="gameboard">
-          <div data-index="0"></div>
-          <div data-index="1"></div>
-          <div data-index="2"></div>
-          <div data-index="3"></div>
-          <div data-index="4"></div>
-          <div data-index="5"></div>
-          <div data-index="6"></div>
-          <div data-index="7"></div>
-          <div data-index="8"></div>
+          <div data-index="0" class="cell"></div>
+          <div data-index="1" class="cell"></div>
+          <div data-index="2" class="cell"></div>
+          <div data-index="3" class="cell"></div>
+          <div data-index="4" class="cell"></div>
+          <div data-index="5" class="cell"></div>
+          <div data-index="6" class="cell"></div>
+          <div data-index="7" class="cell"></div>
+          <div data-index="8" class="cell"></div>
         </div>
       </div>
 
-      <div class="player">
+      <div class="player second">
         <div class="wrapper">
           <p>Player 1</p>
           <svg viewBox="0 0 24 24">
